opam-version: "2.0"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.04.0"}
  "ppx_deriving"
  "ppx_tools"
  "ppxfind"
  "dune"
]
synopsis:
  "Wideopen is a syntax-extension that allows you to use a custom
  parsing utility for OCaml's litterals using by default the of_string
  function of the specified module."
description: "The shadowing trick allows the users to overwrite the
usual arithmetic operators (+, -, ...) with their own by simply doing
let open My_module in .... However the litterals in the program are
still interpreted as integer or floats by OCaml's parser which forces
the programmers to write boilerplate code to handle these cases.
Wideopen is a syntax-extension that allows you to switch easily the
numeric representation used for integers and floats litterals: it
allows you to use a custom parsing utility for OCaml's litterals using
by default the of_string function of the specified module."
